fix a potential problem with the posts page
- use the first page's id, instead of a hard coded one for the posts

--- a/adonis/resources/views/posts.pug
+++ b/adonis/resources/views/posts.pug
@@ -74,7 +74,7 @@ html(lang="en")
         }
 
         try {
-          const postRes = await axios.get(`/api/v1/pages/p1/posts`)
+          const postRes = await axios.get(`/api/v1/pages/${pageData.id}/posts`)
           if (postRes.data && postRes.data.length > 0) postData = postRes.data
         } catch(e) {
           console.error('Failed to get Posts')
